kubernetes/apps/nachet/nachet-frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nachet-frontend
  namespace: nachet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nachet-frontend
  template:
    metadata:
      labels:
        app: nachet-frontend
    spec:
      serviceAccountName: secrets-reader
      containers:
      - name: nachet-frontend
        image: ghcr.io/ai-cfia/nachet-frontend:87e217a2e78dcbf1d1ec940c0bd69be15fc70a59
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10

---
apiVersion: v1
kind: Service 
metadata:
  name: nachet-frontend-svc
  namespace: nachet
spec:
  clusterIP: None
  selector:
    app: nachet-frontend
  ports:
    - protocol: TCP
      port: 3000
