kubernetes/apps/nachet/nachet-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nachet
  labels:
    name: nachet

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nachet-deployment
  namespace: nachet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service 
metadata:
  name: nachet
  namespace: nachet
spec:
  clusterIP: None
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nachet-ingress
  namespace: nachet
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nachet.ninebasetwo.xyz
    secretName: aciacfia-tls
  rules:
  - host: nachet.ninebasetwo.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
