kubernetes/apps/nachet/nachet-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nachet-ingress-backend
  namespace: nachet
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # https://kubernetes.github.io/ingress-nginx/examples/rewrite/
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nachet.ninebasetwo.xyz
    secretName: aciacfia-tls
  rules:
  - host: nachet.ninebasetwo.xyz
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nachet-backend-svc
            port:
              number: 8080

---
# For more information check https://github.com/nginxinc/kubernetes-ingress/issues/323
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nachet-ingress-frontend
  namespace: nachet
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nachet.ninebasetwo.xyz
    secretName: aciacfia-tls
  rules:
  - host: nachet.ninebasetwo.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nachet-frontend-svc
            port:
              number: 3000
